# algorithms

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  .vimrc  CMakeLists.txt  README.md  common_header.h  common_header_test.cpp  configure  project.config
data_structure/linked_list/: CMakeLists.txt  count_size_of_singly_list.cpp  delete_all_of_key_linked_list.cpp  delete_all_of_key_singly_list.cpp  detect_loop.cpp  get_nth_node.cpp  intersection_point.cpp  linked_list.h  merge_k_sorted_singly_list.cpp  merge_two_sorted_list.cpp  merge_two_sorted_singly_list.cpp  middle_of_singly_linked_list.cpp  middle_of_singly_linked_list.h  min_pair_removal_to_sort_array.cpp  nth_node_from_the_end.cpp  random_node_from_singly_linked_list.cpp  reverse_singly_linked_list.cpp  singly_linked_list.cpp  singly_linked_list.h  sorted_insert_linked_list.cpp  sorted_insert_linked_list.h  sorted_insert_singly_list.cpp  sorted_insert_singly_list.h  swap_nodes_in_a_linked_list.cpp
data_structure/linked_list/doubly_list/: CMakeLists.txt  doubly_circular_linked_list.cpp  doubly_circular_linked_list.h  doubly_linked_list.cpp  doubly_linked_list.h  reverse_doubly_list.cpp  xor_linked_list.cpp  xor_linked_list.h
data_structure/linked_list/singly_list/: CMakeLists.txt  array_linked_list.cpp  array_linked_list.h  count_size_of_singly_list.cpp  delete_all_singly_list.cpp  flatten_multilevel_linked_list.cpp  get_nth_node.cpp  intersection_point.cpp  middle_of_singly_linked_list.cpp  middle_of_singly_linked_list.h  nth_node_from_the_end.cpp  random_node_from_singly_linked_list.cpp  reverse_singly_linked_list.cpp  singly_circular_linked_list.cpp  singly_circular_linked_list.h  singly_linked_list.cpp  singly_linked_list.h  split_into_parts.cpp  sum_linked_list_numbers.cpp  swap_nodes_in_pairs.cpp
data_structure/tree/binary_tree/: CMakeLists.txt  binary_tree.h  binary_tree_deletion.cpp  binary_tree_deletion.h  binary_tree_diameter.cpp  binary_tree_height.cpp  binary_tree_height.h  binary_tree_inorder.cpp  binary_tree_insertion.cpp  binary_tree_prune.cpp  binary_tree_search.cpp  binary_tree_search.h  binary_tree_size.cpp  binary_tree_traversals.cpp  binary_tree_traversals.h  clone_binary_tree.h  compare_binary_trees.cpp  compare_binary_trees.h  complete_binary_tree.cpp  complete_binary_tree.h  count_binary_tree_leaves.cpp  count_good_nodes.cpp  cousins_in_binary_tree.cpp  distribute_coins_in_binary_tree.cpp  find_duplicate_subtrees.cpp  full_binary_tree.cpp  inorder_successor.cpp  invert_binary_tree.cpp  is_balanced.cpp  is_subtree.cpp  is_symmetric_tree.cpp  k_sum_paths.cpp  longest_zigzag_path.cpp  max_diff_between_node_and_ancestor.cpp  max_product_of_splitted_binary_tree.cpp  merge_two_binary_trees.cpp  min_depth.cpp  perfect_binary_tree.cpp  print_level_nodes_line_by_line.cpp  single_order_to_binary_tree.cpp  (+4 more)
mathematics/arithmetics/: CMakeLists.txt  mean.cpp  missing_number_in_arithmetic_progression.cpp  moving_average.cpp
mathematics/arithmetics/difference/: CMakeLists.txt  max_difference_between_two_elements_no_sort.cpp  minimum_difference_between_two_elements.cpp
mathematics/arithmetics/division/: CMakeLists.txt  count_odd_numbers.cpp  divisibility.h  division.cpp  fraction_to_recurring_decimal.cpp  is_divisible_by_11.cpp  is_divisible_by_3.cpp  is_divisible_by_5.cpp  is_divisible_by_7.cpp  is_divisible_by_n.cpp  is_divisible_by_n.h  water_bottles.cpp
mathematics/arithmetics/factorial/: CMakeLists.txt  count_digits_in_a_factorial.cpp  count_divisors_of_factorial.cpp  count_factorial_numbers_in_range.cpp  factorial.cpp  factorial.h  trailing_zeros_in_factorial.cpp
mathematics/arithmetics/log/: CMakeLists.txt  log_base_10.cpp
mathematics/arithmetics/modulo/: CMakeLists.txt  modular_division.cpp  modular_exponentiation.cpp  modular_linear_equations.cpp  modular_multiplication.cpp  modular_multiplicative_inverse.cpp  modular_multiplicative_inverse.h  modulo.cpp  modulo.h  number_pairs_divisible_by.cpp  smallest_int_divisible_by_k.cpp  the_modulo_3_sequence.cpp
mathematics/arithmetics/multiplication/: CMakeLists.txt  a_pair_with_maximum_product.cpp  closest_product_pair.cpp  closest_product_pair_to_x.cpp  first_digit_in_product_of_array.cpp  greatest_number_in_array_as_product_of_two_array_elements.cpp  maximum_product_subarray.cpp  multiplication.cpp  multiplication.h  multiplication_of_nodes.cpp  multiply_with_7.cpp  multiply_with_constant.cpp  pair_with_greatest_product_in_array.cpp  product_array_of_all_elements_except_ith.cpp  replace_element_by_multiplication_of_previous_and_next.cpp
mathematics/arithmetics/polynomial/: CMakeLists.txt  binomial_coefficient.cpp  binomial_coefficient.h  horner_method.cpp  pascal_triangle.cpp
mathematics/arithmetics/power/: CMakeLists.txt  compare_powers.cpp  power.cpp  power_of_3.cpp  squares_of_first_n_numbers.cpp
mathematics/arithmetics/progression/: CMakeLists.txt  arithmetic_progression.cpp  arithmetic_progression.h  missing_number_in_arithmetic_progression.cpp  sum_of_cubes.cpp  sum_of_first_n_even_numbers.cpp  sum_of_first_n_odd_numbers.cpp  sum_of_geometric_series.cpp
mathematics/numbers/: CMakeLists.txt  armstrong_number.cpp  big_integer_multiply.cpp  big_integer_sum.cpp  count_2s_in_range.cpp  count_digits_in_integer.cpp  count_digits_in_integer.h  detect_integer_overflow.cpp  gcd.cpp  gcd.h  happy_number.cpp  is_duck_number.cpp  large_integer.cpp  large_integer.h  lcm.cpp  numbers.h  perfect_square.cpp  perfect_square.h  reverse_digits.cpp  reverse_digits.h  rotate_for_a_max.cpp  self-dividing_numbers.cpp
mathematics/numbers/gcd/: gcd.cpp  (+6 more)
mathematics/probabilistic/: CMakeLists.txt  approximate_median.cpp  birthday_paradox.cpp  count_numbers_with_unique_digits.cpp  equal_probability_random_number.cpp  fair_coin_from_biased_coin.cpp  generate_0_1_25_75_probability.cpp  probabilistic.h  probability_K_in_array.cpp  random_number_generator_in_arbitrary_probability.cpp  random_number_generator_in_arbitrary_probability.h  randomized_set.cpp  reservoir_sampling.cpp  reservoir_sampling.h  shuffle_array.cpp  strong_password_suggester.cpp
(+828 files in other folders)
