include_directories ("${CMAKE_CURRENT_BINARY_DIR}")

CompileBenchmarkExe(count_size_of_singly_list)
CompileTestExe(count_size_of_singly_list)

CompileBenchmarkExe(delete_all_of_key_linked_list)
CompileTestExe(delete_all_of_key_linked_list)

CompileBenchmarkExe(merge_k_sorted_singly_list)
CompileTestExe(merge_k_sorted_singly_list)

CompileBenchmarkExe(merge_two_sorted_singly_list)
CompileTestExe(merge_two_sorted_singly_list)

CompileBenchmarkExe(middle_of_singly_linked_list)
CompileTestExe(middle_of_singly_linked_list)

CompileBenchmarkExe(reverse_singly_linked_list)
CompileTestExe(reverse_singly_linked_list)

CompileBenchmarkExe(sorted_insert_linked_list)
CompileTestExe(sorted_insert_linked_list)

add_subdirectory(doubly_list)
add_subdirectory(singly_list)
