compile_benchmark(mean)
compile_test(mean)

compile_benchmark(moving_average)
compile_test(moving_average)

add_subdirectory(division)
add_subdirectory(factorial)
add_subdirectory(log)
add_subdirectory(modulo)
add_subdirectory(multiplication)
add_subdirectory(polynomial)
add_subdirectory(power)
add_subdirectory(root)
add_subdirectory(subtract)
add_subdirectory(sum)
