CompileBenchmarkExe(count_digits_in_integer)
CompileTestExe(count_digits_in_integer)

CompileBenchmarkExe(is_duck_number)
CompileTestExe(is_duck_number)

CompileBenchmarkExe(large_integer)
CompileTestExe(large_integer)

CompileBenchmarkExe(perfect_square)
CompileTestExe(perfect_square)

CompileBenchmarkExe(rotate_for_a_max)
CompileTestExe(rotate_for_a_max)

add_subdirectory(binary)
add_subdirectory(fibonacci)
add_subdirectory(gcd)
add_subdirectory(prime)
