compile_benchmark(armstrong_number)
compile_test(armstrong_number)

compile_benchmark(count_2s_in_range)
compile_test(count_2s_in_range)

compile_benchmark(count_digits_in_integer)
compile_test(count_digits_in_integer)

compile_benchmark(detect_integer_overflow)
compile_test(detect_integer_overflow)

compile_benchmark(happy_number)
compile_test(happy_number)

compile_benchmark(is_duck_number)
compile_test(is_duck_number)

compile_benchmark(large_integer)
compile_test(large_integer)

compile_benchmark(perfect_square)
compile_test(perfect_square)

compile_benchmark(reverse_digits)
compile_test(reverse_digits)

compile_benchmark(rotate_for_a_max)
compile_test(rotate_for_a_max)

compile_benchmark(self-dividing_numbers)
compile_test(self-dividing_numbers)

add_subdirectory(binary)
add_subdirectory(complex)
add_subdirectory(fibonacci)
add_subdirectory(gcd)
add_subdirectory(prime)
