add_library(probabilistic
    random_number_generator_in_arbitrary_probability.cpp)

CompileBenchmarkExe(equal_probability_random_number)
CompileTestExe(equal_probability_random_number)

CompileBenchmarkExe(fair_coin_from_biased_coin
    probabilistic)
CompileTestExe(fair_coin_from_biased_coin
    probabilistic)

CompileBenchmarkExe(generate_0_1_25_75_probability)
CompileTestExe(generate_0_1_25_75_probability)

CompileBenchmarkExe(random_number_generator_in_arbitrary_probability)
CompileTestExe(random_number_generator_in_arbitrary_probability)

CompileBenchmarkExe(reservoir_sampling)
CompileTerminalApp(reservoir_sampling)

CompileBenchmarkExe(shuffle_array)
CompileTerminalApp(shuffle_array)
