add_subdirectory(BST)

CompileBenchmarkExe(binary_tree_deletion)
CompileTestExe(binary_tree_deletion)

CompileBenchmarkExe(binary_tree_height)
CompileTestExe(binary_tree_height)

CompileBenchmarkExe(binary_tree_insertion)
CompileTestExe(binary_tree_insertion)

CompileBenchmarkExe(binary_tree_search)
CompileTestExe(binary_tree_search)

CompileBenchmarkExe(binary_tree_size)
CompileTestExe(binary_tree_size)

CompileTestExe(binary_tree_traversals)

CompileBenchmarkExe(compare_binary_trees)
CompileTestExe(compare_binary_trees)

CompileBenchmarkExe(complete_binary_tree)
CompileTestExe(complete_binary_tree)

CompileBenchmarkExe(count_binary_tree_leaves)
CompileTestExe(count_binary_tree_leaves)

CompileBenchmarkExe(full_binary_tree)
CompileTestExe(full_binary_tree)

CompileBenchmarkExe(inorder_successor)
CompileTestExe(inorder_successor)

CompileBenchmarkExe(perfect_binary_tree)
CompileTestExe(perfect_binary_tree)
