add_subdirectory(BST)

compile_benchmark(binary_tree_deletion)
compile_test(binary_tree_deletion)

compile_benchmark(binary_tree_height)
compile_test(binary_tree_height)

compile_benchmark(binary_tree_insertion)
compile_test(binary_tree_insertion)

compile_benchmark(binary_tree_search)
compile_test(binary_tree_search)

compile_benchmark(binary_tree_size)
compile_test(binary_tree_size)

compile_test(binary_tree_traversals)

compile_benchmark(compare_binary_trees)
compile_test(compare_binary_trees)

compile_benchmark(complete_binary_tree)
compile_test(complete_binary_tree)

compile_benchmark(count_binary_tree_leaves)
compile_test(count_binary_tree_leaves)

compile_benchmark(full_binary_tree)
compile_test(full_binary_tree)

compile_benchmark(inorder_successor)
compile_test(inorder_successor)

compile_benchmark(is_balanced)
compile_test(is_balanced)

compile_benchmark(is_subtree)
compile_test(is_subtree)

compile_benchmark(is_symmetric_tree)
compile_test(is_symmetric_tree)

compile_benchmark(k_sum_paths)
compile_test(k_sum_paths)

compile_benchmark(perfect_binary_tree)
compile_test(perfect_binary_tree)

compile_benchmark(print_level_nodes_line_by_line)
compile_test(print_level_nodes_line_by_line)
