CompileBenchmarkExe(modular_division)
CompileTestExe(modular_division)

CompileBenchmarkExe(modular_multiplicative_inverse)
CompileTestExe(modular_multiplicative_inverse)

CompileBenchmarkExe(modulo)
CompileTestExe(modulo)

CompileBenchmarkExe(the_modulo_3_sequence)
CompileTestExe(the_modulo_3_sequence)

add_library(modulo
    modulo.cpp)
