CompileBenchmarkExe(largest_sum_contiguous_subarray)
CompileTestExe(largest_sum_contiguous_subarray)

CompileBenchmarkExe(multiple_array_range_increment_operations)
CompileTestExe(multiple_array_range_increment_operations)

CompileBenchmarkExe(smallest_subarray_with_sum_greater_than_given_value)
CompileTestExe(smallest_subarray_with_sum_greater_than_given_value)

CompileBenchmarkExe(smallest_sum_contiguous_subarray)
CompileTestExe(smallest_sum_contiguous_subarray)

CompileBenchmarkExe(subarray_with_given_sum)
CompileTestExe(subarray_with_given_sum)

CompileBenchmarkExe(sum)
CompileTestExe(sum)

add_subdirectory(sequences)
