CompileBenchmarkExe(closest_sum_pair_to_x)
CompileTestExe(closest_sum_pair_to_x)

CompileBenchmarkExe(largest_sum_contiguous_subarray)
CompileTestExe(largest_sum_contiguous_subarray)

CompileBenchmarkExe(max_sum_of_subarray_of_size_k)
CompileTestExe(max_sum_of_subarray_of_size_k)

CompileBenchmarkExe(prefix_sum_array)
CompileTestExe(prefix_sum_array)

CompileBenchmarkExe(smallest_subarray_with_sum_greater_than_given_value)
CompileTestExe(smallest_subarray_with_sum_greater_than_given_value)

CompileBenchmarkExe(subarray_with_given_sum)
CompileTestExe(subarray_with_given_sum)

CompileBenchmarkExe(sum)
CompileTestExe(sum)

CompileBenchmarkExe(sum_of_nodes)
CompileTestExe(sum_of_nodes)

add_subdirectory(series)
