add_library(prime
    largest_power_of_p_divides_factorial_n.cpp)
target_link_libraries(prime
    binary)

CompileBenchmarkExe(difference_between_nonprimes_and_primes_of_array)
CompileTestExe(difference_between_nonprimes_and_primes_of_array)

CompileBenchmarkExe(is_prime)
CompileTestExe(is_prime)

CompileBenchmarkExe(least_prime_factor_of_numbers_till_n)
CompileTestExe(least_prime_factor_of_numbers_till_n)

CompileBenchmarkExe(prime_factors_of_n)
CompileTestExe(prime_factors_of_n)

CompileBenchmarkExe(primes_below_n)
CompileTestExe(primes_below_n)

CompileBenchmarkExe(largest_power_of_p_divides_factorial_n
    binary)
CompileTestExe(largest_power_of_p_divides_factorial_n
    binary)
